<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="go">Go</string>
    <string name="clicked">Cliqué</string>
    <string name="authenticated">Authentifié</string>
    <string name="non_authenticated">Combinaison login / mot de passe incorrecte</string>
    <string name="checkers">Jeu de dames</string>
    <string name="sudoku">Sudoku</string>
    <string name="power4">Puissance 4</string>
    <string name="horses">4 chevaux</string>
    <string name="naval_war">Bataille navale</string>
    <string name="chess">Echecs</string>
    <string name="ask_player_name">Nom du joueur</string>
    <string name="validate">Valider</string>
    <string name="cancel">Annuler</string>
    <string name="color">Couleur</string>
    <string name="name_empty_error">Le nom est vide</string>
    <string name="red">Rouge</string>
    <string name="yellow">Jaune</string>
    <string name="blue">Bleu</string>
    <string name="green">Vert</string>
    <string name="pawns_description">Image pion</string>
    <string name="player_turn">Tour du joueur %1$s</string>
    <string name="empty_color">Vide</string>
    <string name="games">Jeux</string>
    <string name="contact">Contacts</string>
    <string name="others">Autres</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="add_contact">Ajouter un contact</string>
    <string name="name">Nom</string>
    <string name="address">Adresse</string>
    <string name="phone">Téléphone</string>
    <string name="phone_empty_error">Le numéro est vide</string>
    <string name="contact_added">Le contact a été ajouté</string>
    <string name="photo">Photo</string>
    <string name="camera_permission_denied">Vous n\'avez pas donné la permission à la caméra</string>
    <string name="camera_permission_granted">Vous pouvez maintenant utiliser la caméra</string>
    <string name="should_autorize_photo">Pour utiliser la caméra vous devez donner à l\'application la permission via la pop up suivante ou vous rendre dans les paramètres</string>
    <string name="ok">Ok</string>
    <string name="autorize_photo_title">Autoriser l\'appareil photo</string>
    <string name="storage_permission_granted">L\'application peut maintenant enregistrer des photos</string>
    <string name="storage_permission_denied">L\'application ne peut pas enregistrer de photos</string>
    <string name="no_camera">Votre appareil n\'a pas de caméra</string>
    <string name="picture_taken">La photo a bien été prise</string>
    <string name="picture_not_taken">La photo n\'a pas été prise</string>
</resources>
