<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.samael.villette.myapplication.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/login"/>

        <EditText
            android:id="@+id/edit_login"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/password"/>

        <EditText
            android:inputType="textPassword"
            android:layout_weight="0.5"
            android:id="@+id/edit_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Space
            android:layout_weight="0.165"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.66"
            android:text="@string/go"
            android:onClick="goCheck"/>

        <Space
            android:layout_width="0dp"
            android:layout_weight="0.165"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>
